# pico-ethproofs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: rust.yml
crates/aggregator-client/: Cargo.toml  build.rs
crates/aggregator-client/src/: lib.rs
crates/aggregator-proto/: Cargo.toml
crates/aggregator-proto/proto/: aggregator.proto
crates/common/: Cargo.toml
crates/common/src/: channel.rs  fetch.rs  inputs.rs  lib.rs  logger.rs  report.rs  utils.rs
crates/fetch-client/: Cargo.toml
crates/fetch-client/src/: http.rs  ws.rs
crates/fetch-service/: Cargo.toml
crates/fetch-service/src/: config.rs  http.rs  lib.rs  service.rs  ws.rs
crates/fetcher/: Cargo.toml
crates/fetcher/src/: config.rs  fetcher.rs  from_start.rs  latest.rs  lib.rs  proving_from_start.rs  proving_latest.rs  reproducing_from_start.rs  subblock_executor.rs
crates/messages/: Cargo.toml
crates/messages/src/: lib.rs
crates/proof-proto/: Cargo.toml
crates/proof-proto/proto/: proof.proto
crates/proof-proto/src/: lib.rs
crates/proof-service/: Cargo.toml  build.rs
crates/proof-service/proto/: proof.proto
crates/proof-service/src/: config.rs  lib.rs  service.rs
crates/proving-client/: Cargo.toml
crates/proving-client/src/: client.rs  config.rs
crates/proving-mock/: Cargo.toml
crates/proving-mock/src/: aggregator.rs  config.rs  lib.rs  service.rs  subblock.rs
crates/reporter/: Cargo.toml
crates/reporter/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/subblock-client/: Cargo.toml
crates/subblock-proto/: Cargo.toml  build.rs
crates/subblock-proto/proto/: subblock.proto
crates/subblock-proto/src/: lib.rs
docs/: multi-machine-setup.md  reproduce-01-sep-2025.md  reproduce_01_Sep_2025.md
ingestor/: Cargo.toml
ingestor-proto/: Cargo.toml  build.rs
ingestor-proto/proto/: ingestor.proto
ingestor-proto/src/: lib.rs
scripts/: build-and-compress.sh  config.template.yaml  deploy-multi-machine.sh  docker-common-config.sh  docker-common.sh  docker-common.sh.example  docker-multi-control.sh  docker-multi-deploy.sh  docker-multi-reset-chunk-size.sh  docker-multi-restart.sh  docker-multi-retry.sh  docker-multi-start.sh  docker-multi-stop.sh  setup.sh
