[workspace]
members = [
  "bin/eth-proofs",             # service main entry
  "bin/test-clients",           # websocket clients for testing eth block proving
  "crates/common",              # common utility functions
  "crates/messages",            # request and response messages transmitted between multiple threads
  "crates/scheduler",           # main scheduler for coordinating multiple threads
  "crates/reporter",            # reporter for collecting and sending block proving reports to client
  "crates/fetcher",             # main functions for fetching eth blocks from rpc and generating inputs
  "crates/fetch-client",        # http and websocket client for communication with fetch service
  "crates/fetch-service",       # http and websocket service for triggering eth block proving and returning response
  "crates/proving-client",      # proving grpc client for sending subblock and aggregation inputs to proving cluster
  "crates/proving-mock",        # mock proving grpc service for testing the whole process
  "crates/subblock-proto",      # grpc protocol for sending subblock input to proving cluster
  "crates/aggregator-proto",    # grpc protocol for sending aggregation input to proving cluster
  "crates/proof-service",       # grpc service for proof return from proving cluster
  "crates/proof-proto",         # grpc protocol for proof return from proving cluster
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# members
common = { path = "crates/common" }
messages = { path = "crates/messages" }
scheduler = { path = "crates/scheduler" }
reporter = { path = "crates/reporter" }
fetcher = { path = "crates/fetcher" }
fetch-client = { path = "crates/fetch-client" }
fetch-service = { path = "crates/fetch-service" }
proving-client = { path = "crates/proving-client" }
proving-mock = { path = "crates/proving-mock" }
subblock-proto = { path = "crates/subblock-proto" }
aggregator-proto = { path = "crates/aggregator-proto" }
proof-service = { path = "crates/proof-service" }
proof-proto = { path = "crates/proof-proto" }

# pico
pico-sdk = { git = "https://github.com/brevis-network/pico.git", branch = "pico-subblock" }

# rsp-subblock
rsp-client-executor = { git = "https://github.com/brevis-network/pico-subblock", branch = "pico-subblock" }
rsp-host-executor = { git = "https://github.com/brevis-network/pico-subblock", branch = "pico-subblock" }
# debug on local
# rsp-client-executor = { path = "../pico-subblock/crates/executor/client" }
# rsp-host-executor = { path = "../pico-subblock/crates/executor/host" }

# misc
alloy-provider = { version = "1.0", features = ["reqwest", "reqwest-rustls-tls", "ws"] }
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
bincode = "1.3.3"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6.1"
derive_more = { version = "2.0", features = ["constructor"] }
dotenvy = "0.15"
futures = "0.3"
futures-util = "0.3"
itertools = "0.13"
prost = "0.13"
reqwest = "0.12"
serde = { version = "=1.0.219", features = ["derive", "rc"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "process"] }
tokio-util = "0.7"
tokio-tungstenite = "0.28"
tonic = { version = "0.13", features = ["zstd"] }
tonic-build = { version = "0.13", features = ["prost"] }
tonic-web = "0.13"
tower = "0.5"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-forest = { version = "0.2", features = ["ansi", "smallvec"] }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
tungstenite = "0.28"

[patch.crates-io]
foldhash = { git = "https://github.com/brevis-network/foldhash.git", branch = "pico" }
revm = { git = "https://github.com/brevis-network/revm.git", branch = "pico" }
revm-bytecode = { git = "https://github.com/brevis-network/revm.git", branch = "pico" }
revm-context = { git = "https://github.com/brevis-network/revm.git", branch = "pico" }
revm-database = { git = "https://github.com/brevis-network/revm.git", branch = "pico" }
revm-database-interface = { git = "https://github.com/brevis-network/revm.git", branch = "pico" }
revm-handler = { git = "https://github.com/brevis-network/revm.git", branch = "pico" }
revm-inspector = { git = "https://github.com/brevis-network/revm.git", branch = "pico" }
revm-interpreter = { git = "https://github.com/brevis-network/revm.git", branch = "pico" }
revm-precompile = { git = "https://github.com/brevis-network/revm.git", branch = "pico" }
revm-primitives = { git = "https://github.com/brevis-network/revm.git", branch = "pico" }
revm-state = { git = "https://github.com/brevis-network/revm.git", branch = "pico" }
sha2 = { git = "https://github.com/brevis-network/hashes.git", package = "sha2", branch = "sha2-0.10.9"}
