[package]
name = "common"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
# misc
anyhow.workspace = true
derive_more.workspace = true
reqwest.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
