[package]
name = "fetch-client"
version.workspace = true
edition.workspace = true

[dependencies]
# members
common.workspace = true

# misc
anyhow.workspace = true
bincode.workspace = true
futures.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tracing.workspace = true
tungstenite.workspace = true
