[package]
name = "fetch-service"
version.workspace = true
edition.workspace = true

[dependencies]
# members
common.workspace = true
messages.workspace = true
proof-proto.workspace = true

# misc
anyhow.workspace = true
axum.workspace = true
bincode.workspace = true
crossbeam.workspace = true
derive_more.workspace = true
futures-util.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
