[package]
name = "fetch-service"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
# members
common.workspace = true
messages.workspace = true
proof-proto.workspace = true

# misc
anyhow.workspace = true
axum.workspace = true
bincode.workspace = true
derive_more.workspace = true
futures-util.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
