[package]
name = "fetcher"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
# members
common.workspace = true
messages.workspace = true

# pico
pico-sdk.workspace = true

# rsp-subblock
rsp-client-executor.workspace = true
rsp-host-executor.workspace = true

# misc
alloy-provider.workspace = true
anyhow.workspace = true
bincode.workspace = true
derive_more.workspace = true
futures.workspace = true
itertools.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
# latest-execution-witness feature invokes `debug_executionWitness` RPC method for prove-latest-block API
# NOTE:
# `debug_executionWitness` is currently used only when proving the latest blocks. Historical blocks
# may not be supported due to limited RPC node resources and pruned or missing state data.
latest-execution-witness = []
