[package]
name = "proof-service"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
# members
messages.workspace = true
proof-proto.workspace = true

# misc
derive_more.workspace = true
tokio.workspace = true
tonic-web.workspace = true
tonic.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true
