[package]
name = "proving-client"
version.workspace = true
edition.workspace = true

[dependencies]
# members
aggregator-proto.workspace = true
common.workspace = true
messages.workspace = true
subblock-proto.workspace = true

# misc
bincode.workspace = true
derive_more.workspace = true
itertools.workspace = true
reqwest.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
