[package]
name = "proving-client"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
# members
aggregator-proto.workspace = true
common.workspace = true
messages.workspace = true
subblock-proto.workspace = true

# misc
bincode.workspace = true
derive_more.workspace = true
itertools.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
