[package]
name = "proving-mock"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
# members
aggregator-proto.workspace = true
common.workspace = true
proof-proto.workspace = true
subblock-proto.workspace = true

# misc
derive_more.workspace = true
reqwest.workspace = true
tokio.workspace = true
tonic-web.workspace = true
tonic.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true
